[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scenes/World/World Block (16x16).gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/Environment/Blocks/beam.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sprites/Environment/Blocks/screw attack.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprites/Environment/Blocks/destruction/2.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sprites/Environment/Blocks/destruction/4.png" type="Texture" id=5]
[ext_resource path="res://Assets/Sprites/Environment/Blocks/bomb.png" type="Texture" id=6]
[ext_resource path="res://Assets/Sprites/Environment/Blocks/destruction/1.png" type="Texture" id=7]
[ext_resource path="res://Assets/Sprites/Environment/Blocks/missile.png" type="Texture" id=8]
[ext_resource path="res://Assets/Sprites/Environment/Blocks/power bomb.png" type="Texture" id=9]
[ext_resource path="res://Assets/Sprites/Environment/Blocks/speed booster.png" type="Texture" id=10]
[ext_resource path="res://Assets/Sprites/Environment/Blocks/destruction/3.png" type="Texture" id=11]
[ext_resource path="res://Assets/Sprites/Environment/Blocks/super missile.png" type="Texture" id=12]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 8 ) ],
"loop": false,
"name": "missile",
"speed": 0.0
}, {
"frames": [ ExtResource( 12 ) ],
"loop": false,
"name": "super missile",
"speed": 0.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": false,
"name": "beam",
"speed": 0.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": false,
"name": "power bomb",
"speed": 0.0
}, {
"frames": [ ExtResource( 10 ) ],
"loop": false,
"name": "speed booster",
"speed": 0.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": false,
"name": "bomb",
"speed": 0.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 4 ), ExtResource( 11 ), ExtResource( 5 ) ],
"loop": false,
"name": "destruction",
"speed": 15.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": false,
"name": "screw attack",
"speed": 0.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 11 ), ExtResource( 4 ), ExtResource( 7 ) ],
"loop": false,
"name": "reappear",
"speed": 15.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8, 8 )

[node name="World Block (16x16)" type="Node2D"]
script = ExtResource( 1 )

[node name="BehaviourTexture" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "reappear"

[node name="MainTexture" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource( 3 )

[node name="ReappearTimer" type="Timer" parent="."]
one_shot = true
[connection signal="timeout" from="ReappearTimer" to="." method="_on_ReappearTimer_timeout"]
